Correzzioni sql builder (from syntax)

--- a/SitoWEB/index.html
+++ b/SitoWEB/index.html
@@ -52,7 +52,7 @@
             <div class="container compare-container">
                <h1>
                   <img src="./images/sql.png" style="MAX-WIDTH: 40PX;" >
-                  Esegui SQL Query
+                  Esegui Query SQL
                </h1>
                <hr>
                <div class="row text-left">
